--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>기업형 웹 페이지</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/c47106c6a7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/ie.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="ie.js"></script>
 </head>
 <body>
     <header>
@@ -33,7 +33,7 @@
         </div>
     </header>
     <figure>
-        <video src="img/visual.mp4" autoplay muted loop></video>
+        <video src="visual.mp4" autoplay muted loop></video>
         <div class="inner">
             <h1>INNOVATION</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>
@@ -48,7 +48,7 @@
             <div class="wrap">
                 <article>
                     <div class="pic">
-                        <img src="img/news1.jpg" alt="1번째 콘텐트 이미지">
+                        <img src="news1.jpg" alt="1번째 콘텐트 이미지">
                     </div>
                     <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -57,7 +57,7 @@
 
                 <article>
                     <div class="pic">
-                        <img src="img/news2.jpg" alt="2번째 콘텐트 이미지">
+                        <img src="news2.jpg" alt="2번째 콘텐트 이미지">
                     </div>
                     <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -66,7 +66,7 @@
 
                 <article>
                     <div class="pic">
-                        <img src="img/news3.jpg" alt="3번째 콘텐트 이미지">
+                        <img src="news3.jpg" alt="3번째 콘텐트 이미지">
                     </div>
                     <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -75,7 +75,7 @@
 
                 <article>
                     <div class="pic">
-                        <img src="img/news4.jpg" alt="4번째 콘텐트 이미지">
+                        <img src="news4.jpg" alt="4번째 콘텐트 이미지">
                     </div>
                     <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
